--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -15,11 +15,11 @@ on:
 
 env:
   MANIFEST: git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0
-  DEVICE: rosy
-  DT_LINK: https://github.com/JamieHoSzeYui/android_recovery_xiaomi_rosy
-  DT_PATH: device/xiaomi/rosy
-  KERNEL_LINK: https://github.com/Pulkit077/kernel_xiaomi_rosy
-  KERNEL_PATH: kernel/xiaomi/rosy
+  DEVICE: ysl
+  DT_LINK: https://github.com/qrovic/android_device_xiaomi_ysl-twrp
+  DT_PATH: device/xiaomi/ysl
+  KERNEL_LINK: https://github.com/qrovic/kernel_xiaomi_ysl-4.9
+  KERNEL_PATH: kernel/xiaomi/ysl
   TARGET: recoveryimage
   TZ: Asia/Kolkata
 
