--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,11 +14,11 @@ on:
     types: [started]
 
 env:
-  MANIFEST: git://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0
+  MANIFEST: git://github.com/SKYHAWK-Recovery-Project/platform_manifest_twrp_omni.git -b android-9.0
   DEVICE: ysl
   DT_LINK: https://github.com/qrovic/android_device_xiaomi_ysl-twrp
   DT_PATH: device/xiaomi/ysl
-  KERNEL_LINK: https://github.com/qrovic/kernel_xiaomi_ysl-4.9
+  KERNEL_LINK: https://github.com/qrovic/kernel_xiaomi_msm8953-ysl
   KERNEL_PATH: kernel/xiaomi/ysl
   TARGET: recoveryimage
   TZ: Asia/Kolkata
