--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
 
 env:
-  MANIFEST: git://github.com/SKYHAWK-Recovery-Project/platform_manifest_twrp_omni.git -b android-9.0
+  MANIFEST: https://gitlab.com/OrangeFox/Manifest.git -b fox_9.0
   DEVICE: ysl
   DT_LINK: https://github.com/moonwaybot/device_xiaomi_ysl_twrp
   DT_PATH: device/xiaomi/ysl
