--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
 
 env:
-  MANIFEST: https://gitlab.com/OrangeFox/Manifest.git -b fox_9.0
+  MANIFEST: https://github.com/PterodonRecovery/manifest -b master
   DEVICE: ysl
-  DT_LINK: https://github.com/adamayyad/ysl-twrp
+  DT_LINK: https://github.com/moonwaybot/device_xiaomi_ysl_twrp
   DT_PATH: device/xiaomi/ysl
   KERNEL_LINK: https://github.com/qrovic/Fox_kernel_ysl_4.9
   KERNEL_PATH: kernel/xiaomi/msm8953
